--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     </head>
     <body>
         <header>
-            <h1>WELKOM TERUG, HANKY PANKY SHANGHAI</h1>
+            <h1>WELKOM</h1>
+            <h1>U land over x uren op aarde</h1>
+            <article id="dog"></article>
         </header>
         <main> </main>
         <footer>
 
         </footer>
+        <script src="scripts/api.js"></script>
     </body>
 </html>
