--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Weather API</title>
+        <title>World Domination Charts</title>
         <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <header>
             <h1>WELKOM</h1>
-            <h1>U land over x uren op aarde</h1>
+            <h1>Current world leader</h1>           
             <article id="dog"></article>
         </header>
         <main> </main>
