--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
         
-        <script src="http://js.api.here.com/v3/3.0/mapsjs-core.js"
+        <script src="https://js.api.here.com/v3/3.0/mapsjs-core.js"
         type="text/javascript" ></script>
-        <script src="http://js.api.here.com/v3/3.0/mapsjs-service.js"
+        <script src="https://js.api.here.com/v3/3.0/mapsjs-service.js"
         type="text/javascript" charset="utf-8"></script>             
-        <script src="http://js.api.here.com/v3/3.0/mapsjs-ui.js" 
+        <script src="https://js.api.here.com/v3/3.0/mapsjs-ui.js" 
         type="text/javascript" charset="utf-8"></script>
         <script src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"
         type="text/javascript" charset="utf-8"></script>
         <link rel="stylesheet" type="text/css" 
-        href="http://js.api.here.com/v3/3.0/mapsjs-ui.css" />
+        href="https://js.api.here.com/v3/3.0/mapsjs-ui.css" />
 
 
     
