--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
     </head>
     <body>
         <div class="grid-container">
-            <div class="item1">
+            <div class="header">
                 <h1>WARNING</h1>
                 <p>You have been away too long. A virus has broken out which made dogs the new dominant spieces. Not long after chaos broke out dogs have been fighting to become the new world leader. Few humans are left alive and most of them are hiding deep underground. A few others have decided to work for the enemy in order to survive.</p>
             </div>
-            <div class="item2">
+            <div class="firstarticle">
                 <h1>Current world leader</h1>
+                <p>World leaders keep changing because of the constant war even between the dominant spieces. The current world leader is:</p>
                 <div id="dog"></div>
             </div>
-            <div class="item3">
+            <div class="secondarticle">
                 <h1>Safe places to land</h1>
                 <p>There are only a few places left to land safely and to find direct underground shelter with the remaining humans.</p>
                 <div id=mapContainer></div>            
